# Kursach2

./: .gitignore  Kursach.sln
Kursach/: CMakeLists.txt  Kursach.cpp  Kursach.vcxproj  main.cpp
Kursach/include/: application.h  base.h  support.h
Kursach/src/: CMakeLists.txt  application.cpp  base.cpp  support.cpp
